        - If this meter gets too high, they will build a "home" if they do not have one already.
            - This is turned off by default in the config, and Wanderers themselves can be turned off as well.
* Added Vexbots to Tlaloc.
    - Spawn Radiolaria (White Lava) when they die (can be disabled in config).
    - Can't we stay here with the murderous robots?
* Added the Vexbot Boss.
    - Similar to the regular Vexbot, but much bigger, faster, and stronger.
    - Only appears in Tlaloc Dungeons.
* Added Tlaloc Dungeons to Tlaloc. These spawn hundreds of blocks away from each other, awaiting with rewards.
    - This is the mod's first attempt at a boss dungeon; please report any bugs or issues.
* Added the Toci, Perdita, Tlaloc and Oasis Villagers.
* Added the Galaxy Dragon mob, akin to a Baby Ender Dragon. This mob is tameable using a bone.
    - You can also tempt it / make it breed by giving it a Lost Peach or a Lost Berry.
    - At this time, they cannot be ridden, but that is planned for the future.
    - These do not spawn naturally, and instead, they spawn when the Dragon Egg is broken.
        - Obtained after fighting the Ender Dragon.
* Added a stack increase helper for Saddles, Ender Pearls, Signs, Buckets and Snowballs from 16 to 64.
    - This can be disabled in the config.
* Added Plutonium and Fueltonium Ingots as solid fuel for Extreme Reactors.
* Added new Enrichment Dust item as a Circuit Fabricator recipe.
    - Used to 'enrich' certain items via different types of recipes, usually used in conjunction with other mods.
    - Will have some use in this mod as well.
* Added new Induction Smelter (Thermal Expansion) Recipe: 2 Cyanite Ingots + 2 Enrichment Dust = 2 Blutonium Ingots.
    - Extreme Reactors will need to be present for this to work, and the compatibility config option will need to be set to true.
* Added new Crafting Recipe: 1 Poisonous Potato + 1 Enrichment Dust = 2 Regular Potatoes.